@@ -94,29 +94,30 @@
 #define IDC_DBG_OTHER1			( IDC_DBG_REG_IM + 1 )
 #define IDC_DBG_OTHER2			( IDC_DBG_OTHER1 + 1 )
 
-#define IDC_DBG_TEXT_ADDRESS		( IDC_DBG_OTHER2 + 1 )
-#define IDC_DBG_TEXT_WRITABLE		( IDC_DBG_OTHER2 + 2 )
-#define IDC_DBG_TEXT_SP			( IDC_DBG_OTHER2 + 3 )
-#define IDC_DBG_TEXT_PC			( IDC_DBG_OTHER2 + 4 )
-#define IDC_DBG_TEXT_AF1		( IDC_DBG_OTHER2 + 5 )
-#define IDC_DBG_TEXT_AF			( IDC_DBG_OTHER2 + 6 )
-#define IDC_DBG_TEXT_BC			( IDC_DBG_OTHER2 + 7 )
-#define IDC_DBG_TEXT_DE			( IDC_DBG_OTHER2 + 8 )
-#define IDC_DBG_TEXT_HL			( IDC_DBG_OTHER2 + 9 )
-#define IDC_DBG_TEXT_IX			( IDC_DBG_OTHER2 + 10 )
-#define IDC_DBG_TEXT_I			( IDC_DBG_OTHER2 + 11 )
-#define IDC_DBG_TEXT_R			( IDC_DBG_OTHER2 + 12 )
-#define IDC_DBG_TEXT_IY			( IDC_DBG_OTHER2 + 13 )
-#define IDC_DBG_TEXT_HL1		( IDC_DBG_OTHER2 + 14 )
-#define IDC_DBG_TEXT_DE1		( IDC_DBG_OTHER2 + 15 )
-#define IDC_DBG_TEXT_BC1		( IDC_DBG_OTHER2 + 16 )
-#define IDC_DBG_TEXT_CONTENDED		( IDC_DBG_OTHER2 + 17 )
-#define IDC_DBG_TEXT_SOURCE		( IDC_DBG_OTHER2 + 18 )
-#define IDC_DBG_TEXT_IM			( IDC_DBG_OTHER2 + 19 )
-#define IDC_DBG_TEXT_IFF1		( IDC_DBG_OTHER2 + 20 )
-#define IDC_DBG_TEXT_IFF2		( IDC_DBG_OTHER2 + 21 )
-#define IDC_DBG_TEXT_ULA		( IDC_DBG_OTHER2 + 22 )
-#define IDC_DBG_TEXT_T_STATES		( IDC_DBG_OTHER2 + 23 )
+#define IDC_DBG_TEXT_SP			( IDC_DBG_OTHER2 + 1 )
+#define IDC_DBG_TEXT_PC			( IDC_DBG_OTHER2 + 2 )
+#define IDC_DBG_TEXT_AF1		( IDC_DBG_OTHER2 + 3 )
+#define IDC_DBG_TEXT_AF			( IDC_DBG_OTHER2 + 4 )
+#define IDC_DBG_TEXT_BC			( IDC_DBG_OTHER2 + 5 )
+#define IDC_DBG_TEXT_DE			( IDC_DBG_OTHER2 + 6 )
+#define IDC_DBG_TEXT_HL			( IDC_DBG_OTHER2 + 7 )
+#define IDC_DBG_TEXT_IX			( IDC_DBG_OTHER2 + 8 )
+#define IDC_DBG_TEXT_I			( IDC_DBG_OTHER2 + 9 )
+#define IDC_DBG_TEXT_R			( IDC_DBG_OTHER2 + 10 )
+#define IDC_DBG_TEXT_IY			( IDC_DBG_OTHER2 + 11 )
+#define IDC_DBG_TEXT_HL1		( IDC_DBG_OTHER2 + 12 )
+#define IDC_DBG_TEXT_DE1		( IDC_DBG_OTHER2 + 13 )
+#define IDC_DBG_TEXT_BC1		( IDC_DBG_OTHER2 + 14 )
+#define IDC_DBG_TEXT_IM			( IDC_DBG_OTHER2 + 15 )
+#define IDC_DBG_TEXT_IFF1		( IDC_DBG_OTHER2 + 16 )
+#define IDC_DBG_TEXT_IFF2		( IDC_DBG_OTHER2 + 17 )
+#define IDC_DBG_TEXT_ULA		( IDC_DBG_OTHER2 + 18 )
+#define IDC_DBG_TEXT_T_STATES		( IDC_DBG_OTHER2 + 19 )
+
+#define IDC_DBG_TEXT_ADDRESS		( IDC_DBG_OTHER2 + 20 )
+#define IDC_DBG_TEXT_WRITABLE		( IDC_DBG_OTHER2 + 21 )
+#define IDC_DBG_TEXT_CONTENDED		( IDC_DBG_OTHER2 + 22 )
+#define IDC_DBG_TEXT_SOURCE		( IDC_DBG_OTHER2 + 23 )
 
 #define IDM_DBG_MENU			( IDC_DBG_TEXT_T_STATES + 1 )
 #define IDM_DBG_VIEW			( IDC_DBG_TEXT_T_STATES + 2 )
